--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -9,7 +9,7 @@ In the case we create another header part, we should duplicate the original and 
 .serinity-header-container {
   position: fixed;
   width: 100%;
-  top: 42px;
+  top: 1rem;
   z-index: 1000;
 
   // Media query for smaller screens
@@ -17,15 +17,15 @@ In the case we create another header part, we should duplicate the original and 
     top: 0;
   }
   .serinity-header-wrapper {
-    height: 84px;
-    backdrop-filter: blur(20px);
+    height: 5.25rem; // 84px
+    backdrop-filter: blur(1.25rem); // 20px
     background-color: rgba(250, 248, 246, 0.5);
     max-width: 1280px;
     flex: 1;
     padding: 0.8rem 1.4rem;
     border-radius: 1.2rem;
     border: solid 1px var(--wp--preset--color--nacre-claire);
-    box-shadow: 0 4px 6px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 .25rem .375rem .125rem rgba(0, 0, 0, 0.1);
 
     // Media query for mid-sized screens
     @media (max-width: 1280px) {
@@ -44,17 +44,17 @@ In the case we create another header part, we should duplicate the original and 
       gap: 1.8rem;
 
       // Hide on smaller screens
-      @media (max-width: 990px) {
+      @media (max-width: 1110px) {
         display: none;
         pointer-events: none;
       }
 
       // Submenu styling
-      .serinity-header-link ul {
+      .serinity-header-link ul.serinity-header-link {
         left: 50%;
         transform: translateX(-50%);
-        border-radius: 10px;
-        backdrop-filter: blur(10px);
+        border-radius: 1.6rem;
+        backdrop-filter: blur(1.6rem);
         background-color: rgba(250, 248, 246, 0.25);
         overflow: hidden;
         border: 1px solid var(--wp--preset--color--nacre-claire);
@@ -73,7 +73,7 @@ In the case we create another header part, we should duplicate the original and 
 
           // Link label
           a {
-            height: 44px;
+            height: 2.75rem; // 44px
             span {
               margin: auto;
             }
@@ -83,7 +83,7 @@ In the case we create another header part, we should duplicate the original and 
 
       // Navigation links
       .serinity-header-link a {
-        padding-top: 4px;
+        padding-top: .25rem; // 4px
         font-weight: 550;
         letter-spacing: 0.15ch;
         font-size: var(--wp--preset--font-size--serinity-xs);
@@ -97,14 +97,14 @@ In the case we create another header part, we should duplicate the original and 
       // CTA button
       .serinity-header-cta {
         background-color: var(--wp--preset--color--rose-claire);
-        height: 44px;
+        height: 2.75rem; // 44px
         padding: 0.5rem 1rem;
         border-radius: 1.2rem;
-        box-shadow: 0 4px 6px 2px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 .25rem .375rem .125rem rgba(0, 0, 0, 0.1);
         transition: background-color 0.3s;
 
         a {
-          padding-top: 4px;
+          padding-top: .25rem;
           font-weight: 550;
           border-radius: 1.2rem;
           height: 100%;
