--- a/src/scss/_testimonies.scss
+++ b/src/scss/_testimonies.scss
@@ -17,18 +17,14 @@
   // Individual testimony cards
   .serinity-testimony {
     flex:none;
-    padding: 1.5rem;
-    margin: 0 15px;
-    border-radius: 20px;
-    min-width: 250px;
-    max-width: 350px;
-    transition: opacity 0.5s ease, transform 0.3s ease, box-shadow 0.3s ease;
+    min-width: 15.625rem; // 250px
+    max-width: 20rem; // 320px
     will-change: opacity, transform; // Optimize for animation performance
     
     // Add hover effect for testimonies
     &:hover {
       transform: translateY(-5px);
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.1);
       opacity: 1 !important; // Force full opacity on hover
       z-index: 2; // Bring the hovered testimony to the front
     }
