--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -11,6 +11,7 @@ In the case we create another header part, we should duplicate the original and 
   width: 100%;
   top: 1rem;
   z-index: 1000;
+  max-width: 100vw;
 
   // Media query for smaller screens
   @media (max-width: 1280px) {
