--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -1,16 +1,41 @@
 .serinity-card {
+  display: flex;
+  align-items: stretch;
   border-radius: 1rem;
+  width: 55rem;
+  max-width: 100vw;
+  height: 34rem;
   overflow: hidden;
-  button:hover svg > rect {
-    fill: var(--wp--preset--color--rose-claire);
+  button {
+    border: none;
+    border-radius: 9999px;
+    box-shadow: 0 0.25rem 0.375rem 0.125rem rgba(0, 0, 0, 0.1);
+    transition: outline 0.2s;
+    svg > rect {
+      fill: var(--wp--preset--color--nacre-claire);
+      transition: fill 0.3s;
+    }
+    &:hover svg > rect {
+      fill: var(--wp--preset--color--rose-claire);
+    }
+    &:focus {
+      outline-offset: 0;
+    }
   }
-
+  
+  > div:nth-child(1) {
+    flex: 5;
+  }
+  > div:nth-child(2) {
+    flex: 4;
+  }
   @media screen and (max-width: 768px) {
     border-radius: 0;
     width: 100vw;
-    .serinity-card-img, img, figure {
-      display: none;
+    .serinity-card-img,
+    img,
+    figure {
+      // display: none;
     }
   }
-
 }
