--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -1,15 +1,16 @@
+@use "../variables" as var;
 .serinity-card {
   display: flex;
   align-items: stretch;
   border-radius: 1rem;
   width: 55rem;
   max-width: 100vw;
-  height: 34rem;
+  min-height: 34rem;
   overflow: hidden;
   button {
     border: none;
     border-radius: 9999px;
-    box-shadow: 0 0.25rem 0.375rem 0.125rem rgba(0, 0, 0, 0.1);
+    box-shadow: var(--wp--preset--shadow--natural);
     transition: outline 0.2s;
     svg > rect {
       fill: var(--wp--preset--color--nacre-claire);
@@ -22,7 +23,7 @@
       outline-offset: 0;
     }
   }
-  
+
   > div:nth-child(1) {
     flex: 5;
   }
@@ -32,10 +33,14 @@
   @media screen and (max-width: 768px) {
     border-radius: 0;
     width: 100vw;
-    .serinity-card-img,
-    img,
-    figure {
-      // display: none;
+    min-height: 30rem;
+    .serinity-card-img {
+      display: none;
+    }
+  }
+  @media screen and (max-width: 500px) {
+    .serinity-card-text {
+      padding: 1.5rem var.$horizontal-padding-small !important;
     }
   }
 }
