--- a/src/scss/_testimonies.scss
+++ b/src/scss/_testimonies.scss
@@ -5,27 +5,28 @@ $max-height: 20rem;
   align-items: flex-start;
   max-width: 100vw;
   width: 100%;
-  margin: 2rem calc(-50vw + 50%);
+  // min-height: 32rem;
+  // margin: 2rem calc(-50vw + 50%);
   // position: relative;
   // overflow: hidden;
-  padding: 2rem 0;
-  max-height: $max-height;
+  height: $max-height;
 
   // Wrapper for all testimonies
   .serinity-carousel-wrapper {
     display: flex;
     align-items: start;
+    overflow-x: clip;
   }
 
   // Individual testimony cards
   .serinity-testimony {
     position: relative;
-    flex: 0 0 100%;
+    flex: 1;
     margin: 0 1rem;
     max-height: $max-height;
+    width: 24rem;
     max-width: calc(100vw - 2rem);
-    $p: 1.8rem;
-    padding: $p calc($p * 1.1);
+    padding: 1.4rem 1.8rem;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     will-change: opacity, transform; // Optimize for animation performance
     box-shadow: var(--wp--preset--shadow--natural);
