--- a/blocks/src/featured-box/style.scss
+++ b/blocks/src/featured-box/style.scss
@@ -21,7 +21,7 @@
   }
 
   // Responsive adjustments
-  @media (max-width: 768px) {
+  @media screen and (max-width: 768px) {
     padding: 16px;
 
     .featured-box-title {
