--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -6,8 +6,9 @@ In the case we create another header part, we should duplicate the original and 
 */
 
 @use "variables" as var;
+$header-breakpoint: 1110px;
 
-// Header container and wrapper styles
+// Header container styles
 .serinity-header-container {
   position: fixed;
   width: 100%;
@@ -16,116 +17,204 @@ In the case we create another header part, we should duplicate the original and 
   max-width: 100vw;
 
   // Media query for smaller screens
-  @media (max-width: 1280px) {
+  @media screen and (max-width: var.$max-content-width) {
     top: var(--wp-admin--admin-bar--height);
   }
-  .serinity-header-wrapper {
-    height: var.$navbar-height;
-    backdrop-filter: blur(1.25rem); // 20px
-    background-color: rgba(250, 248, 246, 0.5);
-    max-width: 1280px;
-    flex: 1;
-    padding: 0.8rem 1.4rem;
-    border-radius: 1.2rem;
-    border: solid 1px var(--wp--preset--color--nacre-claire);
-    box-shadow: 0 .25rem .375rem .125rem rgba(0, 0, 0, 0.1);
+}
 
-    // Media query for mid-sized screens
-    @media (max-width: 1280px) {
-      border-radius: unset;
-      border: unset;
-      border-bottom: solid 1px var(--wp--preset--color--nacre-claire);
-    }
+// Header wrapper styles
+.serinity-header-wrapper {
+  height: var.$navbar-height;
+  backdrop-filter: blur(1.25rem); // 20px
+  background-color: rgba(250, 248, 246, 0.5);
+  max-width: var.$max-content-width;
+  flex: 1;
+  padding: 0.8rem 1.4rem;
+  border-radius: 1.2rem;
+  border: solid 1px var(--wp--preset--color--nacre-claire);
+  box-shadow: 0 0.25rem 0.375rem 0.125rem rgba(0, 0, 0, 0.1);
 
-    @media screen and (max-width: 500px) {
-      padding: 0.8rem var.$horizontal-padding-small;
-    }
+  // Media query for mid-sized screens
+  @media screen and (max-width: var.$max-content-width) {
+    border-radius: unset;
+    border: unset;
+    border-bottom: solid 1px var(--wp--preset--color--nacre-claire);
+  }
 
-    // Home link styling
-    // .serinity-header-home a {
-    //   // Your home link styles here
-    // }
+  @media screen and (max-width: var.$breakpoint-sm) {
+    padding: 0.8rem var.$horizontal-padding-small;
+  }
 
-    // Navigation menu
+  // Home link styling
+  // .serinity-header-home a {
+  //   // Your home link styles here
+  // }
+
+  &:has(.serinity-hamburger-menu[aria-expanded="true"]) {
     .serinity-header-navigation-menu {
-      gap: 1.8rem;
+      display: flex;
+      pointer-events: auto;
+      position: fixed;
+      width: 100vw;
+      height: 100dvh;
+      inset:0;
+      flex-direction: column;
+      background-color: var(--wp--preset--color--sable-claire);
+      justify-content: center;
+    }
+  }
+}
 
-      // Hide on smaller screens
-      @media (max-width: 1110px) {
-        display: none;
-        pointer-events: none;
+// Navigation menu
+.serinity-header-navigation-menu {
+  gap: 1.8rem;
+  transform-origin: top;
+  
+  // Hide on smaller screens
+  @media screen and (max-width: 1110px) {
+    display: none;
+    pointer-events: none;
+    overflow: hidden;
+  }
+
+  // Submenu styling
+  .serinity-header-link ul.serinity-header-link {
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 1.6rem;
+    backdrop-filter: blur(1.6rem);
+    background-color: rgba(250, 248, 246, 0.25);
+    overflow: hidden!important;
+    border: 1px solid var(--wp--preset--color--nacre-claire);
+
+    // Submenu items
+    li {
+      width: 100%;
+      text-align: center;
+      align-content: center;
+
+      // Link hover state
+      a:hover {
+        background-color: rgba(250, 248, 246, 0.5);
+        color: var(--wp--preset--color--aubergine-sombre);
       }
 
-      // Submenu styling
-      .serinity-header-link ul.serinity-header-link {
-        left: 50%;
-        transform: translateX(-50%);
-        border-radius: 1.6rem;
-        backdrop-filter: blur(1.6rem);
-        background-color: rgba(250, 248, 246, 0.25);
-        overflow: hidden;
-        border: 1px solid var(--wp--preset--color--nacre-claire);
-
-        // Submenu items
-        li {
-          width: 100%;
-          text-align: center;
-          align-content: center;
-
-          // Link hover state
-          a:hover {
-            background-color: rgba(250, 248, 246, 0.5);
-            color: var(--wp--preset--color--aubergine-sombre);
-          }
-
-          // Link label
-          a {
-            height: 2.75rem; // 44px
-            span {
-              margin: auto;
-            }
-          }
-        }
-      }
-
-      // Navigation links
-      .serinity-header-link a {
-        padding-top: .25rem; // 4px
-        font-weight: 550;
-        letter-spacing: 0.15ch;
-        font-size: var(--wp--preset--font-size--serinity-xs);
-        transition: color 0.3s;
-
-        &:hover {
-          color: var(--wp--preset--color--aubergine-sombre);
-        }
-      }
-
-      // CTA button
-      .serinity-header-cta {
-        background-color: var(--wp--preset--color--rose-claire);
+      // Link label
+      a {
         height: 2.75rem; // 44px
-        padding: 0.5rem 1rem;
-        border-radius: 1.2rem;
-        box-shadow: 0 .25rem .375rem .125rem rgba(0, 0, 0, 0.1);
-        transition: background-color 0.3s;
-
-        a {
-          padding-top: .25rem;
-          font-weight: 550;
-          border-radius: 1.2rem;
-          height: 100%;
-          width: 100%;
-          letter-spacing: 0.15ch;
-          font-size: var(--wp--preset--font-size--serinity-xs);
-          transition: color 0.3s;
-        }
-
-        &:hover {
-          background-color: var(--wp--preset--color--rose-sombre);
-          color: var(--wp--preset--color--nacre-claire);
+        span {
+          margin: auto;
         }
       }
     }
+  }
+
+  // Navigation links
+  .serinity-header-link a {
+    padding-top: 0.25rem; // 4px
+    font-weight: 550;
+    letter-spacing: 0.15ch;
+    font-size: var(--wp--preset--font-size--serinity-xs);
+    transition: color 0.3s;
+
+    &:hover {
+      color: var(--wp--preset--color--aubergine-sombre);
+    }
+  }
+
+  // CTA button
+  .serinity-header-cta {
+    background-color: var(--wp--preset--color--rose-claire);
+    height: 2.75rem; // 44px
+    padding: 0.5rem 1rem;
+    border-radius: 1.2rem;
+    box-shadow: 0 0.25rem 0.375rem 0.125rem rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s;
+
+    a {
+      padding-top: 0.25rem;
+      font-weight: 550;
+      border-radius: 1.2rem;
+      height: 100%;
+      width: 100%;
+      letter-spacing: 0.15ch;
+      font-size: var(--wp--preset--font-size--serinity-xs);
+      transition: color 0.3s;
+    }
+
+    &:hover {
+      background-color: var(--wp--preset--color--rose-sombre);
+      color: var(--wp--preset--color--nacre-claire);
+    }
+  }
+}
+
+// Hamburger menu styles
+.serinity-hamburger {
+  &-menu {
+    display: none;
+    pointer-events: none;
+    padding: 15px;
+    cursor: pointer;
+    background-color: transparent;
+    border: 0;
+    margin: 0;
+
+    @media screen and (max-width: 1110px) {
+      display: flex;
+      pointer-events: auto;
+    }
+  }
+
+  &-box {
+    width: 24px;
+    height: 24px;
+    display: inline-block;
+    position: relative;
+  }
+
+  &-inner {
+    display: block;
+    top: 50%;
+    margin-top: -2px;
+  }
+
+  &-inner,
+  &-inner::before,
+  &-inner::after {
+    width: 24px;
+    height: 2px;
+    background-color: #333;
+    position: absolute;
+    transition: transform 0.15s ease;
+  }
+
+  &-inner::before,
+  &-inner::after {
+    content: "";
+    display: block;
+  }
+
+  &-inner::before {
+    top: -8px;
+  }
+
+  &-inner::after {
+    bottom: -8px;
+  }
+
+  /* Animation for the hamburger to X transition */
+  &-menu[aria-expanded="true"] &-inner {
+    transform: rotate(45deg);
+  }
+
+  &-menu[aria-expanded="true"] &-inner::before {
+    top: 0;
+    opacity: 0;
+  }
+
+  &-menu[aria-expanded="true"] &-inner::after {
+    bottom: 0;
+    transform: rotate(-90deg);
   }
 }
