--- a/src/scss/_landing-page.scss
+++ b/src/scss/_landing-page.scss
@@ -1,4 +1,5 @@
 @use "variables" as var;
+
 #hero {
   $hero-text-img-height: clamp(14.25rem, 8.8036rem + 27.2321vw, 21.875rem);
   min-height: 55dvh;
@@ -28,7 +29,7 @@
       display: none;
     }
   }
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: var.$breakpoint-md) {
     align-items: stretch;
     min-height: unset;
     padding: 0 0 2rem 0;
@@ -54,7 +55,7 @@
       }
     }
   }
-  @media screen and (max-width: 500px) {
+  @media screen and (max-width: var.$breakpoint-sm) {
     .serinity-hero-text {
       padding: calc($hero-text-img-height + 1rem) var.$horizontal-padding-small 1.2rem
         var.$horizontal-padding-small;
@@ -97,7 +98,7 @@ $opacity-min: 0.1;
       }
     }
   }
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: var.$breakpoint-md) {
     padding-top: 2rem;
     justify-content: flex-end;
     .serinity-questions {
@@ -122,7 +123,7 @@ $opacity-min: 0.1;
   background-size: cover;
   min-height: calc(100vw * (374 / 1816));
   max-width: 100vw;
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: var.$breakpoint-md) {
     min-height: 20rem;
   }
 }
@@ -231,6 +232,18 @@ $opacity-min: 0.1;
       text-justify: inter-word;
     }
   }
+  .serinity-chip {
+    p:first-child {
+      padding: 0 !important;
+      padding-top: 0.2rem !important;
+      min-width: 4.375rem;
+      text-align: center;
+    }
+    p:last-child {
+      flex: 1;
+    }
+  }
+  
   > div {
     max-width: 80rem; // 1280px
     margin: 0 2rem;
@@ -280,18 +293,8 @@ $opacity-min: 0.1;
     isolation: isolate;
   }
 
-  @media screen and (max-width: 768px) {
-    .serinity-chip {
-      p:first-child {
-        padding: 0 !important;
-        padding-top: 0.2rem !important;
-        min-width: 4.375rem;
-        text-align: center;
-      }
-      p:last-child {
-        flex: 1;
-      }
-    }
+  @media screen and (max-width: var.$breakpoint-md) {
+    
     .serinity-coach-img-mobile {
       display: block;
     }
@@ -326,7 +329,7 @@ $opacity-min: 0.1;
       }
     }
   }
-  @media screen and (max-width: 500px) {
+  @media screen and (max-width: var.$breakpoint-sm) {
     > div {
       backdrop-filter: blur(1rem);
       padding: 2rem var.$horizontal-padding-small !important;
@@ -363,7 +366,7 @@ $opacity-min: 0.1;
       var(--wp--preset--color--aubergine) 90%
     );
   }
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: var.$breakpoint-md) {
     padding-top: 4rem !important;
   }
 }
@@ -389,12 +392,12 @@ $opacity-min: 0.1;
     );
     mix-blend-mode: darken;
   }
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: var.$breakpoint-md) {
     .serinity-card {
       min-height: 24.375rem;
     }
   }
-  @media screen and (max-width: 500px) {
+  @media screen and (max-width: var.$breakpoint-sm) {
     .serinity-card {
       min-height: 30.625rem;
     }
