--- a/src/scss/serinity.scss
+++ b/src/scss/serinity.scss
@@ -42,6 +42,9 @@
   &:has(.serinity-page-content) {
     padding-bottom: 0;
   }
+  &:has(.serinity-404) {
+    justify-content: center;
+  }
 }
 
 .wp-block-button {
@@ -126,10 +129,25 @@
   }
 }
 
+.serinity-main .serinity-404 {
+  max-width: $max-content-width;
+  margin: 0 auto;
+  padding: 0 $horizontal-padding-small;
+  blockquote {
+    box-shadow: var(--wp--preset--shadow--natural);
+  }
+}
+
+.serinity-main .serinity-page-content {
+  margin: 0 auto;
+  max-width: $breakpoint-md;
+}
+
 .serinity-basic-section {
   height: clamp(20rem, 13.3333rem + 33.3333vw, 40rem);
   &-content {
     position: relative;
+    gap: 0;
   }
   &-content-txt {
     background-color: rgba(255, 255, 255, 0.5);
