--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -57,7 +57,7 @@ $header-breakpoint: 1110px;
       position: fixed;
       width: 100vw;
       height: 100dvh;
-      inset:0;
+      inset: 0;
       flex-direction: column;
       background-color: var(--wp--preset--color--sable-claire);
       justify-content: center;
@@ -69,7 +69,7 @@ $header-breakpoint: 1110px;
 .serinity-header-navigation-menu {
   gap: 1.8rem;
   transform-origin: top;
-  
+
   // Hide on smaller screens
   @media screen and (max-width: 1110px) {
     display: none;
@@ -84,7 +84,7 @@ $header-breakpoint: 1110px;
     border-radius: 1.6rem;
     backdrop-filter: blur(1.6rem);
     background-color: rgba(250, 248, 246, 0.25);
-    overflow: hidden!important;
+    overflow: hidden !important;
     border: 1px solid var(--wp--preset--color--nacre-claire);
 
     // Submenu items
@@ -110,15 +110,30 @@ $header-breakpoint: 1110px;
   }
 
   // Navigation links
-  .serinity-header-link a {
-    padding-top: 0.25rem; // 4px
-    font-weight: 550;
-    letter-spacing: 0.15ch;
-    font-size: var(--wp--preset--font-size--serinity-xs);
-    transition: color 0.3s;
+  .serinity-header-link {
+    position: relative;
+    a {
+      padding-top: 0.25rem; // 4px
+      font-weight: 550;
+      letter-spacing: 0.15ch;
+      font-size: var(--wp--preset--font-size--serinity-xs);
+      transition: color 0.3s;
 
-    &:hover {
-      color: var(--wp--preset--color--aubergine-sombre);
+      &:hover {
+        color: var(--wp--preset--color--aubergine-sombre);
+      }
+    }
+    &.current-menu-item::after,
+    &.current-menu-ancestor::after {
+      content: "";
+      position: absolute;
+      bottom: -0.4rem;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 100%;
+      height: 0.4rem;
+      background-color: var(--wp--preset--color--aubergine-sombre);
+      border-radius: 0.2rem;
     }
   }
 
