--- a/src/scss/serinity.scss
+++ b/src/scss/serinity.scss
@@ -141,35 +141,73 @@
 .serinity-main .serinity-page-content {
   margin: 0 auto;
   max-width: $breakpoint-md;
+  &:has(#parcours) {
+    // Pour la page À propos
+    max-width: none;
+    margin: 0;
+  }
 }
 
 .serinity-basic-section {
-  height: clamp(20rem, 13.3333rem + 33.3333vw, 40rem);
-  &-content {
+  min-height: 500px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin:0;
+  padding: 2rem;
+  .serinity-basic-section &-content {
     position: relative;
+    max-width: $breakpoint-md;
     gap: 0;
   }
-  &-content-txt {
+  .serinity-basic-section &-content-txt {
     background-color: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(1.25rem);
     position: relative;
     z-index: 1;
     padding: $horizontal-padding-small;
+    margin: 4rem 0;
+    border-radius: 1rem;
   }
-  &-content-img {
+  .serinity-basic-section &-content-img {
+    position: absolute;
+    aspect-ratio: 2/1;
+    height: 90%;
+    transform: translateX(-50%) translateY(-50%);
+    top: 50%;
+    left: 0;
+    border-radius: 1rem;
+    max-width: 864px;
+  }
+  .serinity-basic-section &-content-img.reversed {
+    left: unset;
+    right: 0;
+    transform: translateX(50%) translateY(-50%);
+  }
+  .serinity-basic-section &-content-img :has(> h3) {
+    transform: rotate(-90deg) translateY(-80%);
+    width: 45%;
+    h3 {
+      text-align: center;
+    }
+  }
+  .serinity-basic-section &-content-img.reversed :has(> h3) {
+    transform: rotate(90deg) translateY(-80%);
   }
   @media screen and (max-width: $breakpoint-md) {
     height: unset;
-    &-content {
+    .serinity-basic-section &-content {
       flex-direction: column;
     }
-    &-content-txt {
+    .serinity-basic-section &-content-txt {
       background-color: unset;
       backdrop-filter: unset;
       position: unset;
       z-index: unset;
     }
-    &-content-img {
+    .serinity-basic-section &-content-img {
       position: relative;
       top: unset;
       transform: unset;
