--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,5 @@
-<!-- wp:template-part {"slug":"header","tagName":"header","align":"center"} /-->
+<!-- wp:template-part {"slug":"header","tagName":"header","align":"center","className":"serinity-header"} /-->
 
-<!-- wp:group {"tagName":"main","metadata":{"name":"Main"},"className":"serinity-main","layout":{"type":"constrained"}} -->
-<main class="wp-block-group serinity-main"></main>
-<!-- /wp:group -->
+<!-- wp:post-content /-->
 
-<!-- wp:template-part {"slug":"footer","tagName":"footer"} /-->
+<!-- wp:template-part {"slug":"footer","tagName":"footer","className":"serinity-footer"} /-->
