--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -106,6 +106,19 @@ $header-breakpoint: 1110px;
           margin: auto;
         }
       }
+
+      &.current-menu-item::after,
+      &.current-menu-ancestor::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 75%;
+        height: 0.4rem;
+        background-color: var(--wp--preset--color--aubergine-sombre);
+        border-radius: 0.2rem;
+      }
     }
   }
 
