--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 /*
 Theme Name: Serinity
-Theme URI: 
+Theme URI: https://github.com/AEMuto/serinity
 Author: AEMuto
-Author URI: 
+Author URI: https://github.com/AEMuto
 Description: A theme for coach and healer.
 Requires at least: 6.7
 Tested up to: 6.7
 Requires PHP: 5.7
-Version: 
+Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: serinity
-Tags: 
+Tags: wellness, health, coach, healer, yoga, meditation, mindfulness, spiritual, holistic, alternative, therapy, counseling, life coach, personal development, self-help, self-improvement, self-care, self-love, self-compassion, self-awareness, self-discovery, self-realization, self-actualization, self-transformation, self-empowerment, self-fulfillment, self-acceptance, self-expression, self-regulation, self-control, self-discipline, self-mastery, self-actualization, self
 */
