UPDATE: add max-width to contact form input for better responsiveness

--- a/src/scss/components/_contact_form.scss
+++ b/src/scss/components/_contact_form.scss
@@ -24,6 +24,7 @@
     border-radius: 1rem;
     padding: .8rem 1rem;
     font-weight: 400;
+    max-width: 100%;
   }
   input[type="submit"] {
     margin-top: 1rem;
